prusti-tests/tests/verify/ui/counterexamples/loop.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/loop.rs:6:11
   |
6  | #[ensures(result != 16)]
   |           ^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/loop.rs:7:1
   |
7  | / fn spurious() -> i32 {
8  | |     let mut x = 10;
9  | |     let mut y = 1;
10 | |     while (x > 0) {
...  |
17 | |     y
18 | | }
   | |_^
note: counterexample for "x"
        $(FINAL_VALUE)
  --> $DIR/loop.rs:8:9
   |
8  |     let mut x = 10;
   |         ^^^^^
note: counterexample for "y"
        $(FINAL_VALUE)
  --> $DIR/loop.rs:9:9
   |
9  |     let mut y = 1;
   |         ^^^^^
note: counterexample for result
        $(FINAL_VALUE)
  --> $DIR/loop.rs:7:18
   |
7  | fn spurious() -> i32 {
   |                  ^^^

error: aborting due to previous error

